--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^5.1.0",
+    "express-rate-limit": "^6.7.0",
+    "helmet": "^7.0.0",
     "http-server": "^14.1.1",
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0"
